--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "react": "^16.4.1",
     "react-native": "0.56.0",
+    "react-native-keyboard-aware-scroll-view": "^0.6.0",
     "react-native-svg": "^6.4.1",
     "react-native-svg-uri": "^1.2.3",
     "react-navigation": "^2.6.2"
@@ -21,5 +22,10 @@
   },
   "jest": {
     "preset": "react-native"
+  },
+  "rnpm": {
+    "assets": [
+      "./assets/fonts/"
+    ]
   }
 }
