--- a/package.json
+++ b/package.json
@@ -7,12 +7,15 @@
     "test": "jest"
   },
   "dependencies": {
+    "babel-plugin-transform-svg-import-to-string": "^0.0.1",
     "react": "^16.4.1",
     "react-native": "0.56.0",
     "react-native-keyboard-aware-scroll-view": "^0.6.0",
+    "react-native-splash-screen": "^3.1.1",
     "react-native-svg": "^6.4.1",
     "react-native-svg-uri": "^1.2.3",
-    "react-navigation": "^2.6.2"
+    "react-navigation": "^2.6.2",
+    "uninstall": "0.0.0"
   },
   "devDependencies": {
     "babel-jest": "23.4.0",
