Changed app and package name

--- a/android/.project
+++ b/android/.project
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>truthordare</name>
-	<comment>Project truthordare created by Buildship.</comment>
+	<name>Truth Or Dare</name>
+	<comment>Project Truth Or Dare created by Buildship.</comment>
 	<projects>
 	</projects>
 	<buildSpec>
